# SongPredictor

./: CMakeLists.txt  ModExtractor.cpp  ModPlugFileHandle.cpp  ModPlugFileHandle.h
libmodplug-master/: CMakeLists.txt
libmodplug-master/src/: modplug.cpp  modplug.h  sndfile.cpp
libmodplug-master/src/cppwrap/: Channel.cpp  Channel.h  Instrument.cpp  Instrument.h  ModPlugFileHandle.cpp  ModPlugFileHandle.h  Note.cpp  Note.h  Sample.h  SoundFile.cpp  SoundFile.h
libmodplug-master/src/libmodplug/: sndfile.h  stdafx.h
sqlite/: CMakeLists.txt
